--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,15 @@ allprojects {
 ext {
     junit5Version = '5.0.2'
     junit5PluginVersion = '1.1.0'
+    logbackVersion = '1.3.0-alpha4'
 
     testing = [
             junit: "org.junit.jupiter:junit-jupiter-engine:$junit5Version"
+    ]
+
+    misc = [
+            logback: "ch.qos.logback:logback-classic:$logbackVersion"
+
     ]
 }
 
