--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,8 @@ ext {
 
     misc = [
             log4j: "org.apache.logging.log4j:log4j-core:$log4jVersion",
-            mysql: "mysql:mysql-connector-java:8.0.11"
+            mysql: "mysql:mysql-connector-java:8.0.11",
+            jsefa:"net.sf.jsefa:jsefa:1.1.1.RELEASE"
     ]
 }
 
@@ -21,6 +22,9 @@ subprojects {
     version '1.0-SNAPSHOT'
 
     repositories {
+        maven {
+            url "https://mvnrepository.com"
+        }
         mavenCentral()
     }
 }
