--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,14 @@ allprojects {
 }
 
 ext {
-    junit5Version = '5.0.2'
-    junit5PluginVersion = '1.1.0'
+    junit5Version = '5.3.0-M1'
+    junit5LauncherVersion = '1.2.0'
     log4jVersion = '2.11.0'
 
     testing = [
-            junit: "org.junit.jupiter:junit-jupiter-engine:$junit5Version"
+            jupiter: "org.junit.jupiter:junit-jupiter-engine:$junit5Version",
+            vintage: "org.junit.vintage:junit-vintage-engine:$junit5Version",
+            launcher: "org.junit.platform:junit-platform-launcher:$junit5LauncherVersion"
     ]
 
     misc = [
@@ -22,9 +24,11 @@ subprojects {
     version '1.0-SNAPSHOT'
 
     repositories {
-        maven {
-            url "https://mvnrepository.com"
-        }
         mavenCentral()
+        jcenter()
     }
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
 }
