--- a/build.gradle
+++ b/build.gradle
@@ -8,15 +8,16 @@ ext {
     log4jVersion = '2.11.0'
 
     testing = [
-            jupiter: "org.junit.jupiter:junit-jupiter-engine:$junit5Version",
-            vintage: "org.junit.vintage:junit-vintage-engine:$junit5Version",
+            jupiter : "org.junit.jupiter:junit-jupiter-engine:$junit5Version",
+            vintage : "org.junit.vintage:junit-vintage-engine:$junit5Version",
             launcher: "org.junit.platform:junit-platform-launcher:$junit5LauncherVersion"
     ]
 
     misc = [
+            json : "com.google.code.gson:gson:2.8.5",
             log4j: "org.apache.logging.log4j:log4j-core:$log4jVersion",
             mysql: "mysql:mysql-connector-java:8.0.11",
-            jsefa:"net.sf.jsefa:jsefa:1.1.1.RELEASE"
+            jsefa: "net.sf.jsefa:jsefa:1.1.1.RELEASE"
     ]
 }
 
