--- a/settings.gradle
+++ b/settings.gradle
@@ -16,6 +16,8 @@ include 'chapter06'
 include 'chapter07'
 include 'chapter08'
 include 'chapter09'
+include 'chapter09:logging-jul'
+include 'chapter09:logging-slf4j'
 include 'chapter10'
 
 include 'chapter11:read-write-file'
@@ -35,5 +37,3 @@ rootProject.children.each { project ->
     assert project.buildFile.exists()
     assert project.buildFile.isFile()
 }
-include 'arrays'
-
