--- a/build.gradle
+++ b/build.gradle
@@ -5,24 +5,26 @@ allprojects {
 ext {
     junit5Version = '5.3.0-M1'
     junit5LauncherVersion = '1.2.0'
+    mockitoVersion = '2.21.0'
 
     log4jVersion = '2.11.0'
-    slf4jVersion ='1.8.0-beta2'
-    logbackVersion ='1.3.0-alpha4'
+    slf4jVersion = '1.8.0-beta2'
+    logbackVersion = '1.3.0-alpha4'
 
     testing = [
             jupiter : "org.junit.jupiter:junit-jupiter-engine:$junit5Version",
-            launcher: "org.junit.platform:junit-platform-launcher:$junit5LauncherVersion"
+            launcher: "org.junit.platform:junit-platform-launcher:$junit5LauncherVersion",
+            mockito : "org.mockito:mockito-junit-jupiter:$mockitoVersion"
     ]
 
     misc = [
-            json : "com.google.code.gson:gson:2.8.5",
-            slf4j: "org.slf4j:slf4j-api:$slf4jVersion",
-            log4j: "org.apache.logging.log4j:log4j-core:$log4jVersion",
+            json   : "com.google.code.gson:gson:2.8.5",
+            slf4j  : "org.slf4j:slf4j-api:$slf4jVersion",
+            log4j  : "org.apache.logging.log4j:log4j-core:$log4jVersion",
             logback: "ch.qos.logback:logback-classic:$logbackVersion",
-            mysql: "mysql:mysql-connector-java:8.0.11",
-            jsefa: "net.sf.jsefa:jsefa:1.1.1.RELEASE",
-            derby :"org.apache.derby:derby:10.14.2.0"
+            mysql  : "mysql:mysql-connector-java:8.0.11",
+            jsefa  : "net.sf.jsefa:jsefa:1.1.1.RELEASE",
+            derby  : "org.apache.derby:derby:10.14.2.0"
     ]
 }
 
