028 added JavaFx code sample

--- a/settings.gradle
+++ b/settings.gradle
@@ -20,7 +20,10 @@ include 'chapter09:logging-slf4j'
 include 'chapter09:processapi'
 include 'chapter09:testing'
 
-include 'chapter10'
+include 'chapter10:using-scanner'
+include 'chapter10:using-console'
+include 'chapter10:using-swing'
+include 'chapter10:using-javafx'
 
 include 'chapter11:read-write-file'
 include 'chapter11:serialization'
@@ -39,4 +42,3 @@ rootProject.children.each { project ->
     assert project.buildFile.exists()
     assert project.buildFile.isFile()
 }
-
