--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ ext {
             mysql  : "mysql:mysql-connector-java:8.0.11",
             jsefa  : "net.sf.jsefa:jsefa:1.1.1.RELEASE",
             derby  : "org.apache.derby:derby:10.14.2.0"
+            //seaglasslookandfeel : "com.seaglasslookandfeel:seaglasslookandfeel:0.1.6.1"
     ]
 }
 
