--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ ext {
     junit5Version = '5.3.0-M1'
     junit5LauncherVersion = '1.2.0'
     mockitoVersion = '2.21.0'
+    tomcatVersion = '9.0.0.M6'
 
     log4jVersion = '2.11.0'
     slf4jVersion = '1.8.0-beta2'
@@ -26,6 +27,12 @@ ext {
             jsefa  : "net.sf.jsefa:jsefa:1.1.1.RELEASE",
             derby  : "org.apache.derby:derby:10.14.2.0"
             //seaglasslookandfeel : "com.seaglasslookandfeel:seaglasslookandfeel:0.1.6.1"
+    ]
+
+    tomcat = [
+            embedCore :"org.apache.tomcat.embed:tomcat-embed-core:$tomcatVersion",
+            embedJasper :"org.apache.tomcat.embed:tomcat-embed-jasper:$tomcatVersion",
+            embedLog4j :"org.apache.tomcat.embed:tomcat-embed-logging-log4j:$tomcatVersion"
     ]
 }
 
