--- a/settings.gradle
+++ b/settings.gradle
@@ -24,7 +24,8 @@ include 'chapter10:using-scanner'
 include 'chapter10:using-console'
 include 'chapter10:using-swing'
 include 'chapter10:using-javafx'
-include 'chapter10:web-app'
+// commented because tomcat libs are unstable with Java 9+
+//include 'chapter10:web-app'
 
 include 'chapter11:read-write-file'
 include 'chapter11:serialization'
