--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ ext {
     log4jVersion = '2.11.0'
     slf4jVersion = '1.8.0-beta2'
     logbackVersion = '1.3.0-alpha4'
+    //javafxVersion = '11-ea+23-mac'
+    jaxbVersion = '2.4.0-b180725.0427'
 
     testing = [
             jupiter : "org.junit.jupiter:junit-jupiter-engine:$junit5Version",
@@ -19,20 +21,26 @@ ext {
     ]
 
     misc = [
-            json   : "com.google.code.gson:gson:2.8.5",
-            slf4j  : "org.slf4j:slf4j-api:$slf4jVersion",
-            log4j  : "org.apache.logging.log4j:log4j-core:$log4jVersion",
-            logback: "ch.qos.logback:logback-classic:$logbackVersion",
-            mysql  : "mysql:mysql-connector-java:8.0.11",
-            jsefa  : "net.sf.jsefa:jsefa:1.1.1.RELEASE",
-            derby  : "org.apache.derby:derby:10.14.2.0"
+            json    : "com.google.code.gson:gson:2.8.5",
+            slf4j   : "org.slf4j:slf4j-api:$slf4jVersion",
+            log4j   : "org.apache.logging.log4j:log4j-core:$log4jVersion",
+            logback : "ch.qos.logback:logback-classic:$logbackVersion",
+            mysql   : "mysql:mysql-connector-java:8.0.11",
+            jsefa   : "net.sf.jsefa:jsefa:1.1.1.RELEASE",
+            derby   : "org.apache.derby:derby:10.14.2.0",
+            //commented because the libraries are not on any repo yet
+            //javafx : "org.openjfx:javafx-controls:$javafxVersion",
+            jaxb    : "javax.xml.bind:jaxb-api:$jaxbVersion",
+            jaxbCore: "com.sun.xml.bind:jaxb-core:2.3.0.1",
+            json    : "org.json:json:20180130",
+            sanselan: "org.apache.sanselan:sanselan:0.97-incubator",
             //seaglasslookandfeel : "com.seaglasslookandfeel:seaglasslookandfeel:0.1.6.1"
     ]
 
     tomcat = [
-            embedCore :"org.apache.tomcat.embed:tomcat-embed-core:$tomcatVersion",
-            embedJasper :"org.apache.tomcat.embed:tomcat-embed-jasper:$tomcatVersion",
-            embedLog4j :"org.apache.tomcat.embed:tomcat-embed-logging-log4j:$tomcatVersion",
+            embedCore  : "org.apache.tomcat.embed:tomcat-embed-core:$tomcatVersion",
+            embedJasper: "org.apache.tomcat.embed:tomcat-embed-jasper:$tomcatVersion",
+            embedLog4j : "org.apache.tomcat.embed:tomcat-embed-logging-log4j:$tomcatVersion",
             jstl       : "jstl:jstl:1.2",
             taglibs    : "taglibs:standard:1.1.2"
     ]
