--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,7 @@ allprojects {
 }
 
 ext {
-    junit5Version = '5.3.0-M1'
-    junit5LauncherVersion = '1.2.0'
+    junit5Version = '5.3.2'
     mockitoVersion = '2.21.0'
     tomcatVersion = '9.0.0.M6'
 
@@ -15,8 +14,8 @@ ext {
     jaxbVersion = '2.4.0-b180725.0427'
 
     testing = [
-            jupiter : "org.junit.jupiter:junit-jupiter-engine:$junit5Version",
-            launcher: "org.junit.platform:junit-platform-launcher:$junit5LauncherVersion",
+            api : "org.junit.jupiter:junit-jupiter-api:$junit5Version",
+            engine : "org.junit.jupiter:junit-jupiter-engine:$junit5Version",
             mockito : "org.mockito:mockito-junit-jupiter:$mockitoVersion",
             tck     : "org.reactivestreams:reactive-streams-tck-flow:1.0.2"
     ]
