--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,17 @@ ext {
     log4jVersion = '2.11.0'
     slf4jVersion = '1.8.0-beta2'
     logbackVersion = '1.3.0-alpha4'
-    //javafxVersion = '11-ea+23-mac'
     jaxbVersion = '2.4.0-b180725.0427'
+
+    osType = 'macos'
+
+    if (org.gradle.internal.os.OperatingSystem.current().isLinux()) {
+        osType = 'linux'
+    }  else if (org.gradle.internal.os.OperatingSystem.current().isMacOsX()) {
+        osType = 'macos'
+    } else {
+        osType = 'windows'
+    }
 
     testing = [
             api : "org.junit.jupiter:junit-jupiter-api:$junit5Version",
@@ -28,8 +37,6 @@ ext {
             mysql   : "mysql:mysql-connector-java:8.0.11",
             jsefa   : "net.sf.jsefa:jsefa:1.1.1.RELEASE",
             derby   : "org.apache.derby:derby:10.14.2.0",
-            //commented because the libraries are not on any repo yet
-            //javafx : "org.openjfx:javafx-controls:$javafxVersion",
             jaxb    : "javax.xml.bind:jaxb-api:$jaxbVersion",
             jaxbCore: "com.sun.xml.bind:jaxb-core:2.3.0.1",
             json    : "org.json:json:20180130",
