--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,10 @@
 allprojects {
-    version = '1.0-SNAPSHOT'
+    apply plugin: 'java'
+    apply plugin: 'idea'
+    version = '1.1-SNAPSHOT'
 }
+
+java.sourceCompatibility = JavaVersion.VERSION_14
 
 ext {
     junit5Version = '5.3.2'
@@ -63,7 +67,7 @@ ext {
 }
 
 subprojects {
-    version '1.0-SNAPSHOT'
+    version '1.1-SNAPSHOT'
 
     repositories {
         mavenCentral()
@@ -73,4 +77,8 @@ subprojects {
 
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
+}
+
+tasks.named('wrapper') {
+    distributionType = Wrapper.DistributionType.ALL
 }
